<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipes_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pantry_teal"
        android:fitsSystemWindows="true"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.SmartPantry.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/title_suggested_recipes" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/text_recipes_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/space_m"
        android:paddingTop="@dimen/space_m"
        android:paddingEnd="@dimen/space_m"
        android:paddingBottom="@dimen/space_s"
        android:textAppearance="@style/TextAppearance.SmartPantry.Caption"
        tools:text="4 recipes you can make right now" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_recipes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/space_m"
            tools:listitem="@layout/item_recipe" />

        <LinearLayout
            android:id="@+id/layout_empty_recipes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/space_xl"
            android:visibility="gone"
            tools:visibility="visible">

            <ImageView
                android:layout_width="@dimen/icon_size_empty_state"
                android:layout_height="@dimen/icon_size_empty_state"
                android:contentDescription="@null"
                android:src="@drawable/ic_recipes"
                app:tint="@color/divider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_m"
                android:gravity="center"
                android:text="@string/empty_recipes_title"
                android:textAppearance="@style/TextAppearance.SmartPantry.Title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_s"
                android:gravity="center"
                android:text="@string/empty_recipes_message"
                android:textAppearance="@style/TextAppearance.SmartPantry.Caption" />

        </LinearLayout>

    </FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/surface"
        app:menu="@menu/menu_bottom_nav" />

</LinearLayout>
